fix: card images not clipping to card border radius

--- a/app/assets/css/variables.scss
+++ b/app/assets/css/variables.scss
@@ -76,7 +76,7 @@ $breakpoint-md: 960px;
 $breakpoint-lg: 1280px;
 
 /** other global settings */
-$grid-gap: 1.5rem;
+$grid-gap: 24px;
 $padding-card: 1rem;
 $border-radius: 4px;
 $border-thickness: 2px;
